# mempalace

./: .gitignore  .gitmodules  .markdownlint.jsonc  .taplo.toml  Cargo.toml  README.md  build.rs  bunfig.toml  hk.pkl  mempalace.yaml  mise.toml
.claude/commands/: resync-py.md
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  cargo.yml  clean-pr-cache.yml  lint.yml  test.yml
src/: config.rs  db.rs  error.rs  main.rs  schema.rs
src/cli/: compress.rs  init.rs  mod.rs  search.rs  split.rs  status.rs  wakeup.rs
src/dialect/: emotions.rs  mod.rs  topics.rs
src/extract/: markers.rs  mod.rs
src/kg/: mod.rs  query.rs
src/mcp/: mod.rs  protocol.rs  tools.rs
src/normalize/: chatgpt.rs  claude_ai.rs  claude_code.rs  mod.rs  slack.rs
src/palace/: chunker.rs  convo_miner.rs  drawer.rs  entity_detect.rs  graph.rs  layers.rs  miner.rs  mod.rs  query_sanitizer.rs  room_detect.rs  search.rs
tests/: concurrent_access.rs  fts5_test.rs  schema_test.rs
