[package]
name = "mempalace"
version = "0.1.0"
edition = "2024"
description = "Local-first memory palace for AI assistants — single static binary backed by embedded SQLite"
license = "MIT"
repository = "https://github.com/rblaine95/mempalace"
keywords = ["mcp", "memory", "ai", "sqlite", "llm"]
categories = ["command-line-utilities", "database"]
rust-version = "1.85"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"

[dependencies]
turso = "0.5.3"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "io-std",
  "io-util",
] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
